src/objects/Bidder_Result__c.object
<CustomObject>
    <fields>
        <fullName>Bidder_Summary__c</fullName>
        <label>Bidder Summary</label>
        <referenceTo>Final_Result_Summary__c</referenceTo>
        <relationshipLabel>Bidder Results</relationshipLabel>
        <relationshipName>Bidder_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Bidder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bidder</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Bidder Results</relationshipLabel>
        <relationshipName>Bidder_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_ManOfMatch_Correct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is ManOfMatch Correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Team_Prediction_Correct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Team Prediction Correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Match</label>
        <referenceTo>Match__c</referenceTo>
        <relationshipLabel>Bidder Results</relationshipLabel>
        <relationshipName>Bidder_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Points_Earned__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Points Earned</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <label>UniqueKey</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Bidder Result</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Match__c</columns>
        <columns>Is_ManOfMatch_Correct__c</columns>
        <columns>Is_Team_Prediction_Correct__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BR-{00000}</displayFormat>
        <label>Bidder Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bidder Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>